# pantry

./: .env.example  .gcloudignore  .gitignore  .gitmessage  .pylintrc  AUTH0_VS_CUSTOM_AUTH.md  AUTHENTICATION_SETUP.md  BACKEND_DEPLOYMENT.md  CHANGELOG.md  CLOUD_RUN_DEPLOYMENT.md  DASHBOARD_DEPLOYMENT.md  Dockerfile  FIX_AI_KEYS_ISSUE.md  FIX_AUTH_SUMMARY.md  FIX_RAILWAY_VARIABLES.md  FIX_SAVED_RECIPES_TABLE.md  GOOGLE_VISION_RAILWAY_SETUP.md  GOOGLE_VISION_SETUP_COMPLETE.md  LINK_POSTGRES_RAILWAY.md  MOBILE_RAILWAY_BACKEND.md  NEXT_RELEASE_PLAN.md  PERFORMANCE_SUGGESTIONS.md  PRIVACY_POLICY.md  PRODUCTION_READINESS.md  Procfile  QUICK_DEPLOY_BACKEND.md  RAILWAY_AI_KEYS_SET.md  RAILWAY_AI_KEYS_SETUP.md  RAILWAY_CLI_SETUP.md  RAILWAY_DATABASE_FIX.md  RAILWAY_DEPLOYMENT_SECURITY.md  RAILWAY_ENV_VARIABLES_GUIDE.md  RAILWAY_SETUP_STEPS.md  RAILWAY_VARS_SET.md  README.md  RELEASE_2.3_2.4_RECOMMENDATIONS.md  SAVED_RECIPES_FIXED.md  SECURITY_DESIGN.md  SECURITY_ENV_EXAMPLE.txt  SECURITY_IMPLEMENTATION_PHASE1.md  (+52 more)
.github/: axe-linter-setup.md  create-expo-token.md  ios-code-signing-secrets.md  setup-expo-secret.md  setup-github-cli-auth.md  setup-secrets.sh
.scratch/: ai_analyzer_setup_guide.md  ai_analyzer_summary.md  dashboard_implementation_plan.md  implementation_notes.md  next_task_ai_analyzer.md  next_task_ocr_service.md  ocr_architecture.md  ocr_implementation_summary.md  ocr_setup_guide.md  setup_summary.md  task_1_fastapi_layer.md  task_2_streamlit_dashboard.md  task_3_integration_testing.md  task_4_documentation.md
api/: __init__.py  config.py  dependencies.py  limiter.py  main.py  models.py  utils.py
dashboard/: Dockerfile  __init__.py  app.py  cloudbuild.yaml  requirements.txt
frontend/: package-lock.json  package.json  vercel.json
mobile/: .env.example  .eslintrc.cjs  .gitignore  AUTOMATION.md  App.tsx  CRASH_REPORTING.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  MAESTRO_SETUP.md  QUICK_DEPLOY.md  README.md  TROUBLESHOOTING.md  app.json  build-and-deploy-ios.sh  build-ios.sh  eas.json  (+8 more)
(+170 files in other folders)
